--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ body {
 
 .full-width {
     width: 1200px;
-    margin-left: 120    px;
+    margin-left: 120px;
+    margin-bottom: -20px;
     display: inline-block;
     padding-left: 110px;
     overflow: hidden;
@@ -18,6 +19,7 @@ body {
 .half-width {
     width: 600px;
     height: 600px;
+    margin-bottom: -20px;
     float: left;
 }
 
@@ -272,6 +274,6 @@ nav ul li a {
 
 #contact table {
     margin-left: 115px;
-    width: 310px;
+    width: 300px;
     height: 70px;
 }
